--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -27,10 +27,10 @@
                                 <tr>
                                     <td>@student.Id</td>
                                     <td>@student.FullName</td>
-                                    <td>@student.Code</td>
+                                    <td>@student.StudentCode</td>
                                     <td>10/10</td>
                                     <td>
-                                        <a class="btn btn-sm rounded-pill btn-icon btn-primary" asp-controller="Students" asp-action="Detail" asp-route-code="@student.Code" role="button">
+                                        <a class="btn btn-sm rounded-pill btn-icon btn-primary" role="button">
                                             <i class='tf-icons bx bxs-info-circle'></i>
                                         </a>
                                     </td>
