--- a/Views/Test/Index.cshtml
+++ b/Views/Test/Index.cshtml
@@ -1,7 +1,9 @@
+@model Teacher
+
 <div class="row">
     <div class="card">
         <div class="card-body">
-            <div class="card-title">Giả lập hệ thống RFID : Nhấn để quét thẻ</div>
+            <div class="card-title">Kiểm thử : Đăng nhập dưới tài khoản @Model.TeacherCode - @Model.FullName</div>
             <div class="row">
                 <div class="col-6">
                     <button class="btn btn-info mb-4" type="button">20240000 - Bùi Anh Tú</button>
