--- a/Views/Shared/Sections/_Scripts.cshtml
+++ b/Views/Shared/Sections/_Scripts.cshtml
@@ -4,6 +4,7 @@
     <script src="~/vendor/js/bootstrap.js"></script>
     <script src="~/vendor/js/menu.js"></script>
     <script src="~/js/site.js"></script>
+    <script src="~/js/ui-toasts.js"></script>
 </environment>
 
 <environment exclude="Development">
@@ -12,4 +13,5 @@
     <script src="~/vendor/js/bootstrap.js" asp-append-version="true"></script>
     <script src="~/vendor/js/menu.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/ui-toasts.js" asp-append-version="true"></script>
 </environment>
